// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageView will capture props in useMetrics and on itself works 1`] = `
Array [
  "updated",
  Object {
    "TestPageView": "props",
    "TestReady": "props",
    "count": 1,
    "pageCategory": "Category",
    "pageName": "Page",
    "parentCount": 0,
  },
]
`;

exports[`props updated when changed in MetricsProvider works 1`] = `
Array [
  "updated",
  Object {
    "count": 1,
    "parentCount": 0,
  },
]
`;

exports[`props updated when changed in MetricsProvider works 2`] = `
Array [
  "updated",
  Object {
    "count": 2,
    "parentCount": 1,
  },
]
`;
